# flam-assessment

./: README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgedetectionviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectionviewer/: MainActivity.kt
app/src/main/java/com/example/edgedetectionviewer/gl/: GLRenderer.kt
app/src/main/java/com/example/edgedetectionviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/edgedetectionviewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary/: build.gradle
web/: index.html  main.js  main.ts  styles.css  tsconfig.json
web/mock-ws-server/: package-lock.json  package.json  server.js
